--- a/Milestone-01/Module-02/style.css
+++ b/Milestone-01/Module-02/style.css
@@ -13,6 +13,12 @@ body {
 }
 
 /* Box Width */
+.section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .container {
   max-width: 1100px;
   width: 100%;
@@ -33,15 +39,17 @@ header {
   position: fixed;
   background-color: #fff;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+  z-index: 999;
 }
 
 .nav {
   width: 100%;
+  height: 53px;
   display: flex;
   justify-content: space-between;
+  font-family: 'Playfair Display', serif;
   align-items: center;
   padding: 8px 16px;
-  font-family: 'Playfair Display', serif;
 }
 
 .brand {
@@ -66,8 +74,30 @@ header {
   border-radius: 4px;
   font-size: 16px;
   transition: .3s ease;
+  color: #100d14;
+  letter-spacing: 4px;
 }
 
 .nav__link:hover {
   background-color: #bebebe;
+}
+
+/* Hero Section */
+.w-1440 {
+  max-width: 1440px;
+  width: 100%;
+}
+
+.hero__content {
+  width: 100%;
+  height: 800px;
+  position: relative;
+  overflow: hidden;
+  margin-top: 53px;
+}
+
+.hero__thumbnail {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
