--- a/Milestone-01/Module-02/style.css
+++ b/Milestone-01/Module-02/style.css
@@ -101,3 +101,76 @@ header {
   height: 100%;
   object-fit: cover;
 }
+
+.hero__thumb-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-family: 'Playfair Display', serif;
+  font-size: 36px;
+  letter-spacing: 5px;
+  font-weight: 400;
+  margin: 10px 20px;
+  color: #333;
+}
+
+.about__section {
+  padding: 60px 0 0;
+}
+
+.about__content {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 84px;
+  border-bottom: 1px solid #eee;
+}
+
+.about__thumb-wrap {
+  max-width: 600px;
+  width: 100%;
+  height: 750px;
+  overflow: hidden;
+  border-radius: 2px;
+}
+
+.thumb__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.about__text-wrap {
+  max-width: 500px;
+  width: 100%;
+  margin-left: 48px;
+}
+
+.about__title {
+  text-align: center;
+  font-family: 'Playfair Display', serif;
+  font-size: 36px;
+  letter-spacing: 5px;
+  font-weight: 400;
+  padding: 10px 0;
+  margin-bottom: 36px;
+}
+
+.about__subtitle {
+  display: block;
+  text-align: center;
+  font-family: 'Playfair Display', serif;
+  font-size: 18px;
+  letter-spacing: 5px;
+  font-weight: 400;
+  margin-bottom: 16px;
+}
+
+.about__para {
+  font-size: 16px;
+  padding-bottom: 16px;
+  line-height: 1.6;
+}
+
+.para--two {
+  color: #757575;
+}
