--- a/Milestone-01/Module-02/style.css
+++ b/Milestone-01/Module-02/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 1rem;
 }
 
@@ -38,7 +38,7 @@ header {
   width: 100%;
   position: fixed;
   background-color: #fff;
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   z-index: 999;
 }
 
@@ -47,7 +47,7 @@ header {
   height: 53px;
   display: flex;
   justify-content: space-between;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   align-items: center;
   padding: 8px 16px;
 }
@@ -57,7 +57,7 @@ header {
   letter-spacing: 4px;
   font-size: 1rem;
   border-radius: 4px;
-  transition: .3s ease;
+  transition: 0.3s ease;
 }
 
 .brand:hover {
@@ -68,12 +68,12 @@ header {
   display: flex;
 }
 
-.nav__link{
+.nav__link {
   display: inline-block;
   padding: 8px 16px;
   border-radius: 4px;
   font-size: 16px;
-  transition: .3s ease;
+  transition: 0.3s ease;
   color: #100d14;
   letter-spacing: 4px;
 }
@@ -106,7 +106,7 @@ header {
   position: absolute;
   bottom: 0;
   left: 0;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-size: 36px;
   letter-spacing: 5px;
   font-weight: 400;
@@ -118,14 +118,16 @@ header {
   padding: 60px 0 0;
 }
 
-.about__content {
+.about__content,
+.menu__content {
   display: flex;
   justify-content: space-between;
   padding-bottom: 84px;
   border-bottom: 1px solid #eee;
 }
 
-.about__thumb-wrap {
+.about__thumb-wrap,
+.menu__thumb-wrap {
   max-width: 600px;
   width: 100%;
   height: 750px;
@@ -133,21 +135,25 @@ header {
   border-radius: 2px;
 }
 
-.thumb__img {
+.thumb__img,
+.menu__thumb-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.about__text-wrap {
+.about__text-wrap,
+.menu__text-wrap {
   max-width: 500px;
   width: 100%;
   margin-left: 48px;
 }
 
-.about__title {
+.about__title,
+.text__title,
+.contact__title {
   text-align: center;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-size: 36px;
   letter-spacing: 5px;
   font-weight: 400;
@@ -158,7 +164,7 @@ header {
 .about__subtitle {
   display: block;
   text-align: center;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-size: 18px;
   letter-spacing: 5px;
   font-weight: 400;
@@ -173,4 +179,89 @@ header {
 
 .para--two {
   color: #757575;
+}
+
+/* Our Menu */
+
+.menu__text-wrap {
+  margin-right: 48px;
+  margin-left: 0;
+}
+
+.menu__section {
+  padding: 84px 0 0;
+}
+
+.menu__item {
+  margin-bottom: 32px;
+}
+
+.menu__item-title {
+  font-family: "Playfair Display", serif;
+  font-size: 18px;
+  letter-spacing: 5px;
+  font-weight: 400;
+  padding-bottom: 16px;
+}
+
+.menu__item-subtitle {
+  font-size: 12px;
+  letter-spacing: 2px;
+}
+
+/* Contact Section */
+.contact__section {
+  padding: 84px 0;
+}
+
+.contact__title {
+  text-align: left;
+}
+
+.contact__para {
+  font-size: 14px;
+  margin-bottom: 16px;
+}
+
+.contact__address {
+  font-size: 16px;
+  color: #607d8b;
+  font-weight: 500;
+  display: block;
+  margin-bottom: 16px;
+}
+
+.contact__address-another {
+  font-size: 14px;
+  color: #100d14;
+}
+
+.contact__form {
+  margin-top: 16px;
+}
+
+.form__group {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.form__input {
+  width: 100%;
+  padding: 16px 8px;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  outline: none;
+}
+
+.form__submit {
+  margin-top: 32px;
+}
+
+.form__submit-input {
+  padding: 12px 16px;
+  text-transform: uppercase;
+  font-size: 18px;
+  border: none;
+  background: #f1f1f1;
+  display: inline-block;
 }
