--- a/Milestone-01/Module-02/style.css
+++ b/Milestone-01/Module-02/style.css
@@ -265,3 +265,10 @@ header {
   background: #f1f1f1;
   display: inline-block;
 }
+
+/* Footer Section */
+.footer__text {
+  text-align: center;
+  padding: 60px 20px;
+  background-color: #F1F1F1;
+}
