--- a/Milestone-05/Dom/assets/css/style.css
+++ b/Milestone-05/Dom/assets/css/style.css
@@ -1,8 +1,12 @@
 table {
-    border-collapse: collapse;
-  }
+  border-collapse: collapse;
+}
 
-  td {
-    border: 1px solid black;
-    padding: 3px 5px;
-  }
+td {
+  border: 1px solid black;
+  padding: 3px 5px;
+}
+
+button:hover {
+  color: red;
+}
