--- a/Milestone-05/Moduel_25/assets/css/style.css
+++ b/Milestone-05/Moduel_25/assets/css/style.css
@@ -58,6 +58,10 @@ button {
     margin-top: 20px;
 }
 
+.comment_item {
+    color: #9233ff;
+}
+
 #comment-box {
     display: block;
     outline: none;
