Confirm delete button

--- a/Milestone-05/confirm-delete/assets/css/style.css
+++ b/Milestone-05/confirm-delete/assets/css/style.css
@@ -37,6 +37,12 @@ button {
     cursor: pointer;
 }
 
+:disabled {
+    background-color: #dcdcdc;
+    color: #7f7f7f;
+    border: none;
+}
+
 
 .source-box {
     padding: 30px 20px;
